fix: update list item background color for improved visibility

--- a/style.css
+++ b/style.css
@@ -543,7 +543,7 @@ main {
 }
 
 li {
-  background-color: #ffffffaa;
+  background-color: #ffffff;
   padding: 5px 10px;
   margin: 5px;
   border-radius: 20px;
